--- a/index.pug
+++ b/index.pug
@@ -137,6 +137,12 @@ html(lang="zh-Hant-TW")
                         h1 愛德蘭絲假髮
                             br
                             | 全球第一假髮品牌
+                .carousel-item(data-bs-interval="5000")  
+                    .img#img-four-sp
+                    .position-absolute
+                        h1 愛德蘭絲假髮
+                            br
+                            | 全球第一假髮品牌
         //- End sp       
         //- End FV
 
@@ -165,7 +171,7 @@ html(lang="zh-Hant-TW")
                     .carousel-inner 
                         .carousel-item.active 
                             img.w-100.d-none.d-lg-block(src="source/default/intro/1.jpg", alt="1.量身訂做頭模測量")
-                            img.w-100.d-lg-none(src="source/default/~intro/1-sp.jpg", alt="1.量身訂做頭模測量")
+                            img.w-100.d-lg-none(src="source/default/intro/1-sp.jpg", alt="1.量身訂做頭模測量")
                             h4.position-absolute 1.量身訂做頭模測量
                             .carousel-caption 
                                 p 我們會為每一位客人開模量頭型，讓您的假髮能夠100%符合您的頭型，不會有過大過小的困擾
