--- a/style/index-section-lady.sass
+++ b/style/index-section-lady.sass
@@ -51,6 +51,8 @@ section.jumbotron.d-lg-none
                 background-image: url(../source/default/fv/2-sp.jpg)
             #img-three-sp
                 background-image: url(../source/default/fv/3-sp.jpg)
+            #img-four-sp
+                background-image: url(../source/default/fv/4-sp.jpg)
             .position-absolute
                 background-color: #ffffff76
                 min-height: auto
