--- a/index.pug
+++ b/index.pug
@@ -80,8 +80,9 @@ html(lang="zh-Hant-TW")
                 a.w-100.d-block.text-center(href="#questionAnswer" title="常見問題") 常見問題
                 a.w-100.d-md-block.d-none.text-center.signup-sp(href="https://www.aderanstaiwan.com.tw/reservation_form/" target="_blank" title="立即報名體驗預約") 立即預約
                 a.w-100.d-block.d-md-none.text-center.signup-sp(href="https://www.aderanstaiwan.com.tw/sp/reservation_form/" target="_blank" title="立即報名體驗預約") 立即預約
-        loading 
-        //- section.loading
+                
+        //- loading 
+        section.loading
             img.loadinglogo(src="source/logo/index_logo.png", alt="愛德蘭斯專業假髮")
         //- End nav
 
