--- a/style/mixin-setting.sass
+++ b/style/mixin-setting.sass
@@ -2,11 +2,10 @@
     position: relative
     word-spacing: 2px
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&family=Noto+Serif+JP:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap')
 
 html,body
     // border: 1px solid #000
-    font-family: 'Roboto', sans-serif,'Noto Sans JP', sans-serif, 'Noto Serif JP', serif
+    font-family: 'Roboto', sans-serif,'Noto Sans TC', sans-serif, 'Noto Serif TC', serif
 
 @mixin center
     position: absolute
@@ -54,7 +53,7 @@ a,ul,li
         .title
             h3
                 font-size: 40px
-                font-family: 'Noto Sans JP', sans-serif
+                font-family: 'Noto Sans TC', sans-serif
                 font-weight: bold
                 +lg
                     text-align: center
@@ -91,8 +90,8 @@ a,ul,li
             line-height: 2
             color: $color_grey
             white-space: pre-wrap
-            font-family: 'Roboto', sans-serif
-            font-weight: light
+            font-family: 'Roboto', sans-serif,'Noto Sans TC', sans-serif
+            font-weight: 300
             +lg
                 font-size: 20px
             +md
@@ -165,7 +164,8 @@ a,ul,li
                         background-color: #ffffffc6
                         font-size: 30px
                         letter-spacing: 5px          
-                        color: $color_grey   
+                        color: $color_grey  
+                        font-family:'Noto Sans TC', sans-serif  
                         +lg
                             font-size: 25px
                             padding: 10px 30px
@@ -190,6 +190,7 @@ a,ul,li
                         transition-duration: 0.3s  
                         line-height: 2
                         text-align: left
+                        font-family: 'Noto Sans TC', sans-serif
                         +lg
                             background-color: #ffffffaf 
                             color: $color_dkGrey
