--- a/style/navbar.sass
+++ b/style/navbar.sass
@@ -130,6 +130,8 @@ nav.top
 .mobile-top
 	background-color: #fff
 .fixed-top
+	background-color: transparent
+	box-shadow: none
 	+lg
 		background-color: #fff
 		box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2)
