--- a/index.pug
+++ b/index.pug
@@ -161,9 +161,9 @@ html(lang="zh-Hant-TW")
             .intro
                 .title 
                     h3 假髮介紹
-                        span.d-none.d-lg-inline Indroduction 
+                        span.d-none.d-lg-inline Introduction 
                     p.d-block.d-lg-none.text-center 
-                        | Indroduction
+                        | Introduction
                 .line.rounded-pill 
                 
 
